Dark Mode Visual Changes and Fixes

--- a/style/d/signup.css
+++ b/style/d/signup.css
@@ -1,8 +1,8 @@
 #body {
     height: auto;
     width: auto;
-    background-color: #e5e9ec;
-    color: black;
+    background-color: black;
+    color: white;
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
@@ -26,8 +26,8 @@
     padding-left: 1vw;
     padding-right: 1vw;
 
-    background-color: #eeeeee;
-    color: black;
+    background-color: #222222;
+    color: white;
     border: none;
     border-radius: 1vw;
 
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
 
-    box-shadow: #fefefe 5px 5px 5px;
+    box-shadow: #333333 5px 5px 5px;
 
     overflow-y: auto;
     overflow-x: hidden;
@@ -60,15 +60,12 @@
     margin-left: auto;
 
     transition: transform 0.35s ease, rotate 1s ease;
-
     &:hover {
         transform: scale(1.1) rotate(120deg);
     }
-
     &:active {
         transform: scale(0.99) rotate(240deg);
     }
-
     backface-visibility: hidden;
 }
 
@@ -78,7 +75,7 @@
 }
 
 #top-seperator {
-    background-color: #dddddd;
+    background-color: #555555;
     margin-top: 1vh;
 
     display: flex;
@@ -90,7 +87,7 @@
 
 #credentials-container {
     background-color: none;
-    color: black;
+    color: white;
     margin-top: 1vh;
 
     display: flex;
@@ -99,7 +96,7 @@
 }
 
 #infotext {
-    color: #687172;
+    color: #dddddd;
     margin-top: 0.25vh;
     font-size: smaller;
 
@@ -108,8 +105,8 @@
 }
 
 #email-input {
-    background-color: #dedede;
-    color: black;
+    background-color: #444444;
+    color: white;
     margin-top: 0.25vh;
 
     border: none;
@@ -123,23 +120,24 @@
     transition: transform 0.2s ease, background-color 0.5s linear;
 
     &:focus {
-        background-color: white;
+        background-color: #333333;
         color: #444444;
         transform: scale(1.01);
         outline: none;
     }
 
     &:hover {
-        color: black;
+        color: #dddddd;
         transform: scale(1.01);
         outline: solid 1px #999999;
     }
     backface-visibility: hidden;
 }
 
+
 #password-input {
-    background-color: #dedede;
-    color: black;
+    background-color: #444444;
+    color: white;
     margin-top: 0.25vh;
 
     border: none;
@@ -153,23 +151,23 @@
     transition: transform 0.2s ease, background-color 0.5s linear;
 
     &:focus {
-        background-color: white;
+        background-color: #333333;
         color: #687172;
         transform: scale(1.01);
         outline: none;
     }
 
     &:hover {
-        color: black;
+        color: #dddddd;
         transform: scale(1.01);
-        outline: solid 1px #999999;
+        outline: solid 1px #dddddd;
     }
     backface-visibility: hidden;
 }
 
 #submit-button {
-    background-color: #cccccc;
-    color: black;
+    background-color: #333333;
+    color: white;
     margin-top: 1vh;
 
     border: none;
@@ -189,9 +187,9 @@
     }
 
     &:hover {
-        color: black;
+        color: #dddddd;
         transform: scale(1.01);
-        outline: solid 1px #687172;
+        outline: solid 1px #dddddd;
     }
 
     &:active {
@@ -219,19 +217,37 @@
     color: red;
     font-size: small;
 
-    
 }
 
 #tos-text {
     position: relative;
     display: flex;
 
-    color: #687172;
+    color: #dddddd;
 }
 
-#registration-button{
+#message {
+    background-color: red;
+    color: black;
+
+    border-radius: 1vh;
+
+    justify-content: center;
+    align-content: center;
+
+    position: fixed;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+
+    height: 15vh;
+    width: 35vw;
+}
+
+#login-button{
     background-color: none;
-    color: blue;
+    color: #0077ff;
 
     height: fit-content;
 
@@ -243,7 +259,8 @@
     padding-left: 1vw;
     padding-right: 1vw;
 
-    margin-left: -0.65vw;
+    margin-right: -0.65vw;
+    margin-left: -1vw;
 
     display: flex;
 
@@ -256,20 +273,20 @@
     transition: transform 0.2s ease, background-color 0.5s linear;
 
     &:focus {
-        color: blue;
+        color: #0077ff;
         transform: scale(1.1);
         outline: none;
         cursor: pointer;
     }
 
     &:hover {
-        color: blue;
+        color: #0077ff;
         transform: scale(1.1);
         cursor: pointer;
     }
 
     &:active {
-        color: blue;
+        color: #0077ff;
         transform: scale(0.99);
         cursor: pointer;
     }
@@ -277,7 +294,7 @@
 }
 
 #indicator {
-    background: black;
+    background: #dddddd;
 
     display: flex;
     position: absolute;
@@ -289,5 +306,5 @@
     width: 1vw;
 
     margin-top: 7vh;
-    margin-left: 1.5vw;
+    margin-left: 6.75vw;
 }
